Tested and corrected code, added more data to mysql database